--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,6 +18,7 @@ body {
   scroll-behavior: smooth;
   padding-top: 6.3rem;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body.no-scroll {
